--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
   </header>
   <!-- Main Content -->
   <main>
-    
+    <section id="about">
+      <div class="container">
+        <div class="con-title">
+          <h1>About</h1>
+        </div>
+        <div class="container-section">
+          <p>
+            Selain mengurusi soal listrik, perusahaan pelat merah tersebut kini juga merambah pada penyedia jasa layanan internet cepat berbasis serat optik.<br> Melalui anak usahanya, PT Indonesia Conets Plus (ICON+) atau Iconnet, PLN baru-baru ini meluncurkan layanan fixed broadband internet.<br> "Dengan sinergi antar anak perusahaan PLN, PLN yakin akan mewujudkan cita-cita yang mulia ini melalui Iconnet, layanan Internet yang reliable (andal), affordable (terjangkau), unlimited (tanpa batas), tentunya siap bersaing dengan kompetitor atau penyedia layanan internet lainnya,” kata Direktur Utama PLN, Zulkifli Zaini dalam siaran pers, Selasa (1/6/2021).
+          </p>
+          
+        </div>
+      </div>
+    </section>
   </main>
   <!-- footer -->
   <footer>
