--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#about" class="nav-link">About</a>
           </li>
           <li>
-            <a href="#Produk" class="nav-link">Produk</a>
+            <a href="#produk" class="nav-link">Produk</a>
           </li>
           <li>
             <a href="#contact" class="nav-link">Hubungi kami</a>
@@ -38,14 +38,97 @@
           <p>
             Selain mengurusi soal listrik, perusahaan pelat merah tersebut kini juga merambah pada penyedia jasa layanan internet cepat berbasis serat optik.<br> Melalui anak usahanya, PT Indonesia Conets Plus (ICON+) atau Iconnet, PLN baru-baru ini meluncurkan layanan fixed broadband internet.<br> "Dengan sinergi antar anak perusahaan PLN, PLN yakin akan mewujudkan cita-cita yang mulia ini melalui Iconnet, layanan Internet yang reliable (andal), affordable (terjangkau), unlimited (tanpa batas), tentunya siap bersaing dengan kompetitor atau penyedia layanan internet lainnya,” kata Direktur Utama PLN, Zulkifli Zaini dalam siaran pers, Selasa (1/6/2021).
           </p>
-          
+          <div class="video">
+            <iframe src="https://www.youtube.com/embed/sr0VX7YR_ag" height="315" width="420" id="video" allowfullscreen ></iframe>
+          </div>
         </div>
+      </div>
+    </section>
+    <!-- section produk -->
+    <section id="produk">
+      <div class="container">
+        <div class="con-title">
+          <h1>Paket Iconnet</h1>
+        </div>
+        <p>Berbagai paket yang dapat sesuai dengan layanan kebutuhan internet dan multimedia anda.</p>
+        <div class="container-grid">
+          <div class="card-item">
+            <div class="box-flex">
+              <img src="img/Iconnet.svg" >
+              <h3>10</h3>
+            </div>
+            <h4>Full Fiber To The Home</h4>
+            <h4>Download/Upload</h4>
+            <h4>Unlimited Quota</h4>
+            <h4><span>Rp 140.000</span>/bulan</h4>
+            <div class="con-button">
+              <button>Pesan Sekarang</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="box-flex">
+              <img src="img/Iconnet.svg" >
+              <h3>20</h3>
+            </div>
+            <h4>Full Fiber To The Home</h4>
+            <h4>Download/Upload</h4>
+            <h4>Unlimited Quota</h4>
+            <h4><span>Rp 188.000</span>/bulan</h4>
+            <div class="con-button">
+              <button>Pesan Sekarang</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="box-flex">
+              <img src="img/Iconnet.svg" >
+              <h3>50</h3>
+            </div>
+            <h4>Full Fiber To The Home</h4>
+            <h4>Download/Upload</h4>
+            <h4>Unlimited Quota</h4>
+            <h4><span>Rp 336.000</span>/bulan</h4>
+            <div class="con-button">
+              <button>Pesan Sekarang</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="box-flex">
+              <img src="img/Iconnet.svg" >
+              <h3>100</h3>
+            </div>
+            <h4>Full Fiber To The Home</h4>
+            <h4>Download/Upload</h4>
+            <h4>Unlimited Quota</h4>
+            <h4><span>Rp 563.000</span>/bulan</h4>
+            <div class="con-button">
+              <button>Pesan Sekarang</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contac Me -->
+    <section id="contact">
+      <div class="container">
+        <div class="con-title">
+          <h1>Hubungi Kami</h1>
+        </div>
+        <p>Silahkan Hubungi kami untuk mendapatkan informasi lebih lanjut</p>
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <input type="email" id="email" placeholder="Masukan Email" name="email" required>
+          <div class="submit">
+            <input type="submit" id="submit" name="Submit">
+          </div>
+        </form>
       </div>
     </section>
   </main>
   <!-- footer -->
   <footer>
-
+    Copyright &copy; cloning by Amar's | ICONNET 
   </footer>
+
+  <!-- testing -->
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
